# TechTheKing

./: Readme
AX12/AVR/: ax12.cpp  ax12.h
Robot/Arduino/: MainActionneurs.cpp  MainAsservissement.cpp  MainCapteurs.cpp
Robot/Arduino/CarteAsservissement/: Asservissement  Asservissement.cpp  Asservissement.h  EnvoiPosition  EnvoiPosition.cpp  EnvoiPosition.h  LectureSerie  LectureSerie.cpp  LectureSerie.h  Manager  Manager.cpp  Manager.h
Robot/Documentation/: .gitignore  DoxyConfig  Makefile
Robot/Documentation/Carte/: carte.xcf
Robot/PC/lib/: Actionneurs.rb  Asservissement.rb  Capteurs.rb  Carte.rb  CarteTechTheKing.rb  Detection.rb  Dijkstra.rb  Evenements.rb  Evitement.rb  Log.rb  Objets.rb  Outils.rb  Robot.rb  RobotIntelligent.rb  Serie.rb  cerveau.rb
Robot/PC/test/: AllTests.rb  TestCarte.rb  TestCarteTechTheKing.rb
android/: plop
android/.svn/: entries
android/.svn/text-base/: .project.svn-base  AndroidManifest.xml.svn-base
android/assets/.svn/: entries
android/jni/: Makefile  cvjni.cpp  main.cpp
android/jni/.svn/: entries
baliseLasers/baliseRobot/: Makefile  baliseRobot.hex  baliseRobot.out  main.cpp  main.h
baliseLasers/transmission/: besoins.txt
baseRoulante/AVR/: Cos.c  genCos.c
baseRoulante/Arduino/: MainAsservissement.cpp  mainCompteur.c
baseRoulante/PC/: AUTHORS  EnvironementCrossCompil  Makefile.in  WIFI_AP.sh  configure  configure.in  dhcpd.conf
baseRoulante/PC/autom4te.cache/: output.1  output.2  output.3  requests  traces.1  traces.2  traces.3
baseRoulante/PC/cpp/: EnvironementCrossCompil.sh  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool
baseRoulante/PC/cpp/autom4te.cache/: output.1  output.2  output.3  requests  traces.1  traces.2  traces.3
baseRoulante/PC/cpp/src/: AStar.cpp  AStar.h  AStar.lo  Consigne.cpp  Consigne.h  Consigne.lo  Constantes.cpp  Constantes.h  Constantes.lo  Debug.cpp  I2cBus.h  InterfaceRuby.i  InterfaceRuby_wrap.cxx  InterfaceRuby_wrap.lo  Interfaces.cpp  Interfaces.h  Interfaces.i  Interfaces.lo  Intersection.cpp  Makefile  Makefile.am  Makefile.in  Obstacles.cpp  Obstacles.h  Obstacles.lo  Point.cpp  Point.h  Point.lo  Server.cpp  Server.h  Singleton.cpp  Singleton.h  Socket.cpp  Socket.h  Socket.lo  Thread.cpp  Thread.h  Thread.lo  Util.hpp  b  (+7 more)
baseRoulante/PC/cpp/src/.deps/: AStar.Plo  Consigne.Plo  Constantes.Plo  InterfaceRuby_wrap.Plo  Interfaces.Plo  Obstacles.Plo  Point.Plo  Socket.Plo  Thread.Plo  hiddata.Plo  i2cLib.Plo
baseRoulante/PC/cpp/src/.libs/: libChessUp.la
baseRoulante/PC/lib/: .Consigne.rb.swp  A*BezierGraphique.rb  A*BezierGraphique.rb~  AStar.rb  AStar.rb~  Actionneurs.rb  Asservissement.rb  Bezier.rb  Capteurs.rb  Carte.rb  CarteTechTheFruit.rb  Consigne.rb  Decisions.rb  Detection.rb  Dijkstra.rb  Evitement.rb  Fixnum.rb  Float.rb  GestionEvenements.rb  InterfaceActionneurs.rb  InterfaceAsservissement.rb  InterfaceEvitement.rb  Lissage.rb  Log.rb  Objets.rb  Obstacles.rb  Obstacles.rb~  Point.rb  Position.rb  Robot.rb  RobotDistant.rb  RobotMagique.rb  SDLCarteTheTheFruit.rb  SDLOptiquesEtUltrason.rb  Sequences.rb  SerieSimple.rb  SerieThread.rb  Strategie.rb  Vecteur.rb  test.rb
baseRoulante/PC/libcpp/: AStar.cpp  AStar.h  AStar.rb  Consigne.cpp  Consigne.h  Contrats.h  Contrats.h~  Debug.cpp  Debug.h  I2cBus.h  Interfaces.cpp  Interfaces.h  Obstacles.cpp  Obstacles.h  Point.cpp  Point.h  Point.rb  Server.cpp  Server.h  Singleton.cpp  Singleton.h  Thread.h  cheminRobot  cheminRobot70  debug  main.cpp  main.cpp~  makefile  test
baseRoulante/PC/libcpp/CrossCompil/: AStar.cpp  AStar.h  Consigne.cpp  Consigne.h  Debug.cpp  Debug.h  Interfaces.cpp  Obstacles.cpp  Obstacles.h  Server.cpp  Server.h  Singleton.cpp  Singleton.h  debug  main.cpp  makefile  root@192.168.1.1
baseRoulante/PC/ruby/: actionneurs_AX12.rb  actionneurs_ascenseurs.rb  actionneurs_ascenseurs.rb.save  actionneurs_servos.rb  pince.rb  polling_us.rb  prise_pion_centre.rb  simu.rb  test.rb  testAsservissement.rb  test_actionneurs.rb  test_bras.rb  test_bras.rb.save  test_capteurs.rb
baseRoulante/PC/ruby/Homologation/: .gitignore  cheminRobot0  cheminRobot1  homololation.rb  prendre_pion.rb  recalage.rb
baseRoulante/PC/ruby/match_v1/: recalage.rb  script.rb
baseRoulante/PC/ruby/match_v2/: initialisation.rb  prendre_pion.rb  recalage.rb  script.rb
baseRoulante/PC/ruby/match_v3/: script.rb
baseRoulante/PC/ruby/tests/: bras.rb  capteurs.rb
baseRoulante/PC/ruby2/: Lolation.rb  actionneurs_AX12.rb  actionneurs_servos.rb  testAsservissement.rb  test_bras.rb  test_ultrasons.rb
baseRoulante/PC/ruby2/Homologation/: cheminRobot2  poser_pion.rb  prendre_pion.rb  recalage.rb  test_capteurs.rb
baseRoulante/PC/ruby2/match_v1/: bleu.rb  poser_pion.rb  recalage.rb  rouge.rb  script.rb
baseRoulante/PC/ruby2/tests/: bras.rb
baseRoulante/PC/spec/: SpecInterfaceActionneurs.rb  SpecSerieSimple.rb
baseRoulante/PC/src/: AStar.h  Debug.h  Interfaces.cpp  Interfaces.h  Interfaces.i  Interfaces_wrap.cxx  Makefile.am  Makefile.in  Obstacles.cpp  Obstacles.h  Obstacles.i  SerieThread.h  Server.cpp  Server.h  Thread.cpp  Thread.h
common-AVR/avrlib/: KS0108.h
common-AVR/test/: Makefile.adc  Makefile.test_serie  Makefile.usart  main_test_adc.c  main_test_serie.c
detectionPions/: affichage.cpp  detectionEllipse.cpp  main.cpp  test.txt  traitement.cpp
(+278 files in other folders)
