#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT([src/AStar.cpp])
AM_INIT_AUTOMAKE(libChessUp,0.5)
AC_CONFIG_SRCDIR([src])
AM_PROG_LIBTOOL


AC_LANG(C++)

# Checks for programs.

AC_PROG_CXX
AC_PROG_CC

AC_ARG_ENABLE(magick,
            [  --enable-magick          Enable graphical debugging information (require Magick++)],
            USE_MAGICK="$enableval", USE_MAGICK="no")


if test $USE_MAGICK = yes ; then
    AC_DEFINE([DEBUG_GRAPHIQUE],[],[Utilise Magick++ pour la trajectoire du robot])
    SAVED_LDFLAGS="${LDFLAGS}"
    MAGICK_LDFLAGS=$(echo `Magick++-config --ldflags --libs`)
    LDFLAGS="${LDFLAGS} ${MAGICK_LDFLAGS}"
    SAVED_CPPFLAGS="${CPPFLAGS}"
    MAGICK_CPPFLAGS=$(echo `Magick++-config --cxxflags --cppflags`)
    CPPFLAGS="${CPPFLAGS} ${MAGICK_CPPFLAGS}"
fi

CPPFLAGS="${CPPFLAGS} -I/usr/lib/ruby/1.8/$(arch)-linux/"

# Checks for libraries.

saved_ldflags="${LDFLAGS}"

LDFLAGS="${LDFLAGS} -lboost_thread -lserial -lm"
AC_LANG(C++)
echo -n "checking for lib boost_thread... "
AC_LINK_IFELSE(
[AC_LANG_PROGRAM([#include <boost/thread.hpp>],
[boost::thread dummy])],[echo yes],
[AC_MSG_ERROR([libboost_thread is not installed !!])])
echo -n "checking for lib serial... "
AC_LINK_IFELSE(
[AC_LANG_PROGRAM([#include <SerialStream.h>],
[LibSerial::SerialStream dummy])],[echo yes],
[AC_MSG_ERROR([libserial is not installed !!])])
AC_CHECK_LIB([m], [sqrt])
AC_CHECK_LIB([pthread], [pthread_create])

# Checks for header files.
AC_CHECK_HEADERS([netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([bzero floor socket sqrt])

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile src/Makefile)
