#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT([src/AStar.cpp])
AM_INIT_AUTOMAKE(libChessUp,0.5)
AC_CONFIG_SRCDIR([src])
AM_PROG_LIBTOOL


AC_LANG(C++)

# Checks for programs.

AC_PROG_CXX
AC_PROG_CC

AC_CHECK_PROG([SWIG], [swig], [:])

AC_ARG_ENABLE(magick,
            [  --enable-magick          Informations graphiques de debug (Magick++) ],
            USE_MAGICK="$enableval", USE_MAGICK="no")

AC_ARG_ENABLE(debug,
            [  --enable-debug          Informations de debug sur la sortie standart],
            USE_DEBUG="$enableval", USE_DEBUG="no")

if test $USE_MAGICK = yes ; then
    AC_DEFINE([DEBUG_GRAPHIQUE],[],[Informations graphiques de debug (Magick++)])
    SAVED_LDFLAGS="${LDFLAGS}"
    MAGICK_LDFLAGS=$(echo `Magick++-config --ldflags --libs`)
    LDFLAGS="${LDFLAGS} ${MAGICK_LDFLAGS}"
    SAVED_CPPFLAGS="${CPPFLAGS}"
    MAGICK_CPPFLAGS=$(echo `Magick++-config --cxxflags --cppflags`)
    CPPFLAGS="${CPPFLAGS} ${MAGICK_CPPFLAGS}"
fi

if test $USE_DEBUG = yes ; then
    AC_DEFINE([DEBUG],[],[Informations de debug sur la sortie standart])
fi

CPPFLAGS="${CPPFLAGS} -I/usr/lib/ruby/1.8/$(arch)-linux/"

# Checks for libraries.

saved_ldflags="${LDFLAGS}"

LDFLAGS="${LDFLAGS} -lboost_thread -lserial -lusb -lm"
AC_LANG(C++)
AC_CHECK_HEADERS([boost/thread.hpp], [],
    [AC_MSG_ERROR(You need the Boost-Thead libraries.)])
AC_CHECK_HEADERS([SerialStream.h], [],
    [AC_MSG_ERROR(You need the libserial libraries.)])
AC_CHECK_HEADERS([usb.h], [],
    [AC_MSG_ERROR(You need the libusb libraries.)])
AC_CHECK_HEADERS([ruby.h], [],
    [AC_MSG_ERROR(You need the ruby-dev libraries.)])
AC_CHECK_LIB([m], [sqrt])
AC_CHECK_LIB([pthread], [pthread_create])

# Checks for header files.
AC_CHECK_HEADERS([netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([bzero floor socket sqrt])

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile src/Makefile)
